[workspace]

members = [
  "crates/lust-lib",
  "crates/lust",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/kajacx/lust"
license = "MIT"
keywords = ["lua", "type-checking"]
categories = ["development-tools"]
authors = ["Karel Hrkal <kajacx@gmail.com>"]
description = "An in-line type checker for Lua"
