[package]
name = "lust-lib"
description = "A Rust library for static type checking in Lua."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[build-dependencies]
lalrpop = "0.22.2"

[dependencies]
lalrpop-util = { version = "0.22.0", features = ["lexer", "unicode"] }
